--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
-.container{
+*{
+    margin: 0px;
+    padding: 0px;
+}
+.left-side-bar{
     width: 200px;
     display: flex;
     flex-direction: column;
 }
 .l-side-img{
     margin: 5px;
-    width: 72px;
-    height: 72px;
+    width: 78px;
+    height: 78px;
 }
