--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
     display: flex;
     flex-direction: column;
     overflow: scroll;
-    height: 640px;
+    height: 900px;
+    /* position: fixed; */
 }
 .l-side-img{
     margin: 12px;
@@ -43,4 +44,12 @@ a{
 a:hover{
     border:1px solid;
     border-radius: 30px;
+}
+.main-img{
+    margin-left: -5px;
+    border: 1px solid rgb(192, 223, 221);
+    border-radius: 30px;
+}
+.img{
+    margin-left: 30px;
 }
